@@ -1,5 +1,6 @@
 0.47
  - Fix use lib '.' in Makefile.PL.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Move bugtracker to github.
  - Rename LICENSE to LICENSE.artistic_2.
  - Update Module::Install to 1.21 version.
